--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # Compiled class file
 *.class
 
+#
+.metadata/
+.mvn/
+.bin/
+*.md
+ *mvnw
+*.cmd
+
+
 # Log file
 *.log
 
@@ -10,15 +19,8 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/mvnw
