--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/application.yml
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
  
 spring:
  datasource:
-  url: "jdbc:mysql://localhost:3306/bd_restaurante_5to_ciclo?useSSL=false&serverTimeZone=UTC"
-  username: "cibertec"
+  url: "jdbc:mysql://localhost:3307/bd_restaurante_5to_ciclo?useSSL=false&serverTimeZone=UTC"
+  username: "root1"
   password: "123456"
  jpa:
   show-sql: true
